# Splash

./: ACTION_PLAN.md  ANALYSIS.md  README.md  docker-compose.yml  formulas.md
.github/workflows/: ci.yml
client/: README.md  index.html  package-lock.json  package.json
client/public/wasm/: counter.wasm  hello_world.wasm
client/src/: App.css  App.jsx  Landing.css  Landing.jsx  ai.js  compiler.js  deploy.js  stellar.js  wallet.js
client/src/contracts/: examples.js
contract/: Cargo.toml  README.md  lib.rs
frontend/: .env.example  .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx  styles.css
frontend/src/components/: Button.tsx  Shell.tsx  SkeletonLoader.tsx  StreamCard.tsx  TickerBalance.tsx  Toast.tsx  TransactionModal.tsx
frontend/src/data/: mockStreams.ts
frontend/src/hooks/: useContractEvents.ts  useLiveAmount.ts  useStellarWallet.ts  useStreamActions.ts  useStreams.ts  useTicker.ts  useToast.ts  useToast.tsx  useWallet.tsx
frontend/src/lib/: errorTracking.ts  formatters.ts  stellar.ts  streamStorage.ts
frontend/src/pages/: CreateStream.tsx  CreateStreamPage.tsx  Dashboard.tsx  DashboardPage.tsx  HomePage.tsx  Landing.tsx  StreamDetail.tsx  StreamDetailPage.tsx
frontend/src/types/: stream.ts  (+1 more)
server/: Dockerfile  build-examples.js  index.js  package-lock.json  package.json
server/templates/: Cargo.toml
streamvault/: .gitignore  Cargo.toml  README.md
streamvault/scripts/: test-docker.ps1
(+41 files in other folders)
